Add functioning JS as well as HTML score counters. Game runs infinitely

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <h1>Welcome to Roshambo!</h1>
         <div class="subheading">You know how to play. This one's best of 5.</div>
    </header>    
+   
+   <div class="totalCont">
+    Game Count:
+   </div>
 
+   <h3 class="gameTotal">
+
+   </h3>
+    
    <div class="selectionContainer">
         <button class="posSelect">
             <img class="Rock" src="/home/jake/Repos/roshambo/images/rock.jpg" alt="Rock">
@@ -30,16 +38,16 @@
     <div class="scoreboard">
         <div class="playerScore">
             Your Score:
-            <div class="pScoreFluid">
+            <h2 class="pScoreFluid">
 
-            </div>
+            </h2>
         </div>
 
         <div class="computerScore">
             Computer Score:
-            <div class="cScoreFluid">
+            <h2 class="cScoreFluid">
 
-            </div>
+            </h2>
 
         </div>
 
