--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
         </button>
     </div>
 
+    <div class="popup">
+        <img id="result" src="" alt="standing">
+        <div class="popupMsg">
+            <div class="playerStanding">
+                Yourself:
+                <h3 class="finalPlayerScore">
+
+                </h3>
+            </div>
+            <div class="computerStanding">
+                Computer:
+                <h3 class="finalComputerScore">
+
+                </h3>
+            </div>      
+        </div>
+        <div class="standMsg">
+            
+        </div>
+        <button class="reset">Play Again</button>
+    </div>
+
     <div class="scoreboard">
         <div class="playerScore">
             Your Score:
